0.5.2 (TBR)
    Checkstyle config update: avoid fail on errors like "Unable to get class information for"
    Pmd config update: remove j2ee section (as not relevant)
    Add checkstyle html report generation
    Add developerConnection and tag to generated pom
    Add bintray user question (for badge generation)
    Add maven central version and bintray badges to readme

0.5.1 (2014-09-01)
    Update pmd config
    Fix build fail if git repo not initialized (because of release plugin)
    Move sign release config option into bintray section

0.5.0 (2014-08-25)
    Add custom pmd config
    Add pmd errors print to console
    Fix gradlew file permissions
    Add date marker to generated changelog
    Add release process support (gradle-release plugin)

0.4.0 (2014-08-16)
    Add question for artifact maven group
    Add simplified checkstyle configuration (enabled by default)
    Code quality tools run on sources only (avoid tests)
    Add 'powered by' badge to generated readme
    Fix generated project build

0.3.0 (2014-08-15)
    Don't generate sources folder if existing found (for easy projects migration)
    Detailed template logs activated with --verbose option (hidden by default)
    Remove [user] section in global preferences file
    Add defaults for bintraySignFiles and enableQualityChecks

0.2.0 (2014-08-15)
    Add bintray jars signing option question
    Add code quality enable option question
    Update npm dependencies

    Cleanup gradle build, update plugins
    Add versions task to gradle build to easily track dependencies updates
    Add dependency tree build task to build html report and analyze it
    Add code quality plugins

0.1.1 (2014-08-11)
    Updated docs

0.1.0 (2014-08-11)
    Initial release